refactor: fix some routing issues and merge conflicts